# python-lazy-object-proxy

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: github-actions.yml
ci/: appveyor-bootstrap.ps1  appveyor-bootstrap.py  appveyor-download.py  appveyor-with-compiler.cmd  bootstrap.py  requirements.txt
ci/templates/: .appveyor.yml  .travis.yml  appveyor.yml  tox.ini
ci/templates/.github/workflows/: github-actions.yml
conf/: .travis.yml  tox.ini
docs/: conf.py  index.rst  installation.rst  usage.rst  wrappers.rst
docs/reference/: index.rst  lazy_object_proxy.rst
src/lazy_object_proxy/: __init__.py  _proxy.c  cext.c  compat.py  proxy.py  simple.py  slots.py  utils.py
tests/: compat.py  conftest.py  test_async.py  test_async_py3.py  test_lazy_object_proxy.py  test_perf.py
