[options]
setup_requires =
  setuptools_scm>=3.2.0

[flake8]
max-line-length = 140
exclude = */migrations/*

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
markers =
    xfail_subclass: Expected test to fail with a subclass of Proxy.
    xfail_simple: Expected test to fail on the `simple` implementation.
addopts =
    -ra
    --strict
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = lazy_object_proxy
default_section = THIRDPARTY
forced_separate = test_lazy_object_proxy
not_skip = __init__.py
skip = migrations
